Added CarbonFootprintRecordsByUserId endpoint to OpenAPI spec
